shortest path - try pairing exp with modules shortest path - make remote workshop always appear first